cabal-version:   3.16
name:            h-crawler-hs
version:         0.1.0.0
license:         NONE
author:          pastchick3
maintainer:      pastchick3@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    build-depends:    base ^>=4.22.0.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable h-crawler-hs
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.22.0.0,
        h-crawler-hs

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite h-crawler-hs-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.22.0.0,
        h-crawler-hs
